<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Inicio!</string>
    <string name="app_name">Diaspora</string>
    <string name="arrowright">\u2192</string>
    <string name="subject">Subject</string>
    <string name="send">Send</string>
    <string name="start">Start</string>
    <string name="contacts">Contacts</string>
    <string name="no_new_notifications">No new notifications</string>
    <string name="no_new_messages">No new messages</string>
    <string name="profile">Profile</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Don\'t remember your password?</string>
    <string name="log_in">Log in</string>
    <string name="new_message">New message</string>
    <string name="to">To</string>
    <string name="message">Message</string>
    <string name="select_contacts">Select contacts</string>
    <string name="comments">Comments</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="email">Email</string>
    <string name="instruccions">Send me instructions to re-establish my password</string>
    <string name="notifications">Notifications</string>
    <string name="on_your_mind">What\'s on your mind?</string>
    <string name="share">Share</string>
    <string name="make_public">Share</string>
    <string name="choose_services">Choose services</string>
    <string name="my_contacts">My contacts</string>
</resources>
