<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@color/white" android:orientation="vertical">
	<RelativeLayout android:id="@+id/label_header"
		android:background="@drawable/home_actionbar" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<ImageView android:layout_width="wrap_content" android:id="@+id/logo_header"
			android:layout_height="wrap_content" android:src="@drawable/logo_large"
			android:layout_marginLeft="6dip" android:layout_centerHorizontal="true"
			android:layout_centerVertical="true" />

		<!-- <ImageView android:layout_width="wrap_content" android:id="@+id/preferences_header" -->
		<!-- android:layout_height="wrap_content" android:src="@drawable/ic_menu_preferences" -->
		<!-- android:layout_centerVertical="true" -->
		<!-- android:layout_alignParentRight="true"></ImageView> -->


	</RelativeLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:orientation="vertical" android:layout_height="fill_parent"
		android:layout_marginLeft="7px" android:layout_marginRight="7px"
		android:gravity="center_vertical">
		<TextView android:layout_width="fill_parent" android:gravity="center"
			android:layout_height="wrap_content" android:textSize="22px"
			android:textStyle="bold" android:textColor="@color/black"
			android:text="@string/forgot_password"></TextView>
		<EditText android:layout_width="fill_parent"
			android:layout_marginLeft="19dip" android:layout_marginRight="20dip"
			android:layout_marginTop="7dip" android:background="@drawable/my_border_white_not_open"
			android:gravity="center" android:layout_height="wrap_content"
			android:paddingTop="4dip" android:inputType="textEmailAddress"
			android:paddingBottom="4dip" android:hint="@string/email"></EditText>
		<Button android:paddingRight="28px" android:layout_gravity="left"
			android:layout_marginLeft="20dip" android:id="@+id/Entrar"
			android:paddingBottom="5dip" android:textStyle="bold"
			android:paddingTop="5dip" android:layout_height="wrap_content"
			android:text="@string/log_in" android:textColor="#084B8A"
			android:gravity="left" android:background="@null"
			android:layout_width="wrap_content"></Button>
		<Button android:layout_width="fill_parent"
			android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
			android:layout_marginBottom="7dip" android:paddingBottom="4dip"
			android:paddingTop="4dip" android:textColor="@color/black"
			android:layout_gravity="center" android:layout_height="wrap_content"
			android:text="@string/instruccions" android:textStyle="bold"></Button>

	</LinearLayout>
</LinearLayout>
